@@ -1,15 +1,20 @@
-# welk-lidwoord
-Een app die je helpt met kiezen van het juiste lidwoord
+# Welk Lidwoord❓
+A desktop application that will help you to improve your Dutch grammar. Should you use `de` or `het` for the word `huis`?
+When do you use `ons` or `onze`? What about `die`, `dat`, `dit` or `deze`.
+Don't worry, this little app will quicly help you out whenever you need some help. See below for the demo
 
-### Benodigdheden:
+## Demo
+![alt text](https://github.com/Hakky54/welk-lidwoord/blob/master/images/demo.gif?raw=true)
+
+### Requirements:
 - Java 17
 - Maven
 
-### Bouwen & Opstarten
-Dit is mogelijk door middel van maven:
-- mvn compile exec:java
+### Building executable
+Create and run an executable jar:
+1. `mvn clean verify`
+2. `java -jar target/Welk-Lidwoord.jar`
 
-Of het opstarten van de App.java met de volgende vm argumenten:
-```
---add-exports javafx.graphics/com.sun.javafx.css=flatter
-```
+Or start it with the exec plugin
+1. `mvn clean verify`
+2. `mvn exec:jara`
